--- a/index.html
+++ b/index.html
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>LFG Trucking</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LFG Trucking</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <img src="assets/lfg-trucking-logo.jpg" alt="LFG Trucking Logo" class="logo">
-        <h1>LFG Trucking</h1>
-        <p class="tagline">Reliable Hotshot Services — Fast. Local. Professional.</p>
-        <p class="contact">Call us: <a href="tel:+15551234567">(555) 123-4567</a> | Email: <a href="mailto:info@lfgtrucking.com">info@lfgtrucking.com</a></p>
-    </div>
+  <header>
+    <img src="assets/lfg-trucking-logo.jpg" alt="LFG Trucking Logo" class="logo" />
+    <h1>LFG Trucking</h1>
+    <p class="tagline">Hotshot Delivery – Fast, Local, Reliable</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>
+        LFG Trucking is a Texas-based hotshot delivery service built for urgent, on-demand freight shipping.
+        We offer responsive, efficient, and dedicated logistics to ensure your cargo arrives on time, every time.
+      </p>
+    </section>
+
+    <section>
+      <h2>Our Services</h2>
+      <ul>
+        <li>24/7 Hotshot Freight Delivery</li>
+        <li>Flatbed and Gooseneck Transport</li>
+        <li>Regional & Local Loads</li>
+        <li>Fully Insured and DOT Compliant</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why Choose Us</h2>
+      <ul>
+        <li>Fast Dispatch & Real-Time Tracking</li>
+        <li>Experienced Drivers & Safe Equipment</li>
+        <li>Competitive Pricing with No Hidden Fees</li>
+        <li>Family-Owned, Customer-Driven</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:hotshot@lfgtrucking.com">hotshot@lfgtrucking.com</a></p>
+      <p>Phone: <a href="tel:+15551234567">(555) 123-4567</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 LFG Trucking. All rights reserved.</p>
+  </footer>
 </body>
 </html>
