--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/lfg-trucking-logo.jpg" alt="LFG Trucking Logo" class="logo" />
+    <img src="assets/ChatGPT Image Jul 29, 2025, 09_23_13 PM.png" alt="LFG Trucking Logo" class="logo" />
     <h1>LFG Trucking</h1>
     <p class="tagline">Hotshot Delivery – Fast, Local, Reliable</p>
   </header>
